grafana/grafana-deployment.yaml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: grafana-pv
#   labels:
#     type: local
# spec:
#   storageClassName: slow
#   capacity:
#     storage: 5Gi
#   accessModes:
#     - ReadWriteOnce
#   hostPath:
#     path: "/mnt/data"
#   claimRef:
#     namespace: monitoring-manifestfile
#     name: grafana-pv-claim
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: grafana-pv-claim
#   namespace: monitoring-manifestfile
# spec:
#   storageClassName: slow
#   volumeName: grafana-pv
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 5Gi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: monitoring-manifestfile
  labels:
    app: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      nodeName: node1
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
      containers:
      - name: grafana
        image: grafana/grafana:9.0.5
        imagePullPolicy: IfNotPresent
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: 500M
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false
      volumes:
        - name: grafana-datasources
          configMap:
            defaultMode: 420
            name: grafana-datasources
        - name: grafana-storage
          # persistentVolumeClaim:
          #   claimName: grafana-pv-claim
          emptyDir: {}
